save changes before refactoring the db schema

--- a/src/Resources/app/administration/src/module/eccb-module/page/eccb-step-list/eccb-step-list.twig
+++ b/src/Resources/app/administration/src/module/eccb-module/page/eccb-step-list/eccb-step-list.twig
@@ -29,7 +29,7 @@
                         :repository="configuratorStepRepository"
                         :columns="columns"
                         :showSelection="false"
-                        detailRoute="eccb.module.stepDetail"
+                        detailRoute="eccb.module.detail"
                 >
                 </sw-entity-listing>
 
