--- a/src/Resources/app/administration/src/module/eccb-module/page/tree-node/tree-node-detail/tree-node-detail.scss
+++ b/src/Resources/app/administration/src/module/eccb-module/page/tree-node/tree-node-detail/tree-node-detail.scss
@@ -1,42 +1,56 @@
 // Image in sidebar
-.eccb-tree-node-detail .image-container {
-  margin: 0 auto 40px auto;
-  padding: 10px;
+.eccb-tree-node-detail {
+  .image-container {
+    margin: 0 auto 40px auto;
+    padding: 10px;
 
-  .image {
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 5px;
+    .image {
+      max-width: 100%;
+      max-height: 100%;
+      border-radius: 5px;
+    }
+  }
+
+  .sw-modal {
+    z-index: 9999;
+  }
+
+  .group {
+    display: flex;
+    align-items: last baseline;
   }
 }
 
-.sw-modal {
-  z-index: 9999;
-}
+//.eccb-tree-node-detail {
+//  .sw-select-result {
+//    padding-right: 3em;
+//  }
+//}
 
-.sw-select-result span.sw-select-result__result-item-text {
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  min-width: 100%;
 
-  .sw-icon {
-    margin-left: 0px;
-    margin-right: 5px;
-    visibility: hidden;
+.eccb-tree-node-item-card-select {
+  padding-right: 3em;
+
+  span.sw-select-result__result-item-text {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    min-width: 100%;
+
+    .sw-icon {
+      margin-left: 0px;
+      margin-right: 5px;
+      visibility: hidden;
+    }
+
+    .sw-icon:hover {
+      color: #ed1c24 !important;
+    }
   }
-
-  .sw-icon:hover {
-    color: #ed1c24 !important;
-  }
 }
 
-.group {
-  display: flex;
-  align-items: center;
-}
 
-li.sw-select-result:hover .sw-icon {
+li.eccb-tree-node-item-card-select:hover .sw-icon {
   visibility: visible;
   color: gray !important;
 }
