--- a/src/Resources/app/administration/src/module/eccb-module/page/tree-node/component/item-set-list/item-set-list.twig
+++ b/src/Resources/app/administration/src/module/eccb-module/page/tree-node/component/item-set-list/item-set-list.twig
@@ -29,6 +29,8 @@
                         labelProperty="internalName"
                         @item-add="onItemSetAdd"
                         @item-remove="onItemSetRemove"
+                        @search-term-change="search"
+                        @select-expanded="search"
                 >
                 </sw-multi-select>
             </div>
