--- a/src/Resources/app/administration/src/module/eccb-module/page/item-set/item-set-list/item-set-list.twig
+++ b/src/Resources/app/administration/src/module/eccb-module/page/item-set/item-set-list/item-set-list.twig
@@ -25,8 +25,8 @@
         {% block eccb_item_set_list_smart_bar_actions %}
             <template #smart-bar-actions>
                 {% block eccb_item_set_list_smart_bar_actions_add %}
-                    <sw-button :routerLink="{ name: 'eccb.plugin.create' }" variant="primary">
-                        {{ $tc('eccb.item-set-list.buttonAddStep') }}
+                    <sw-button :routerLink="{ name: 'eccb.plugin.item-set.create' }" variant="primary">
+                        {{ $tc('eccb.item-set-list.addItemSet') }}
                     </sw-button>
                 {% endblock %}
             </template>
