fix sidebar image issue, add shortcut to sequence entry point

--- a/src/Resources/app/administration/src/module/eccb-module/page/step-set/step-set-list/eccb-step-set-list.twig
+++ b/src/Resources/app/administration/src/module/eccb-module/page/step-set/step-set-list/eccb-step-set-list.twig
@@ -16,7 +16,7 @@
             <template #smart-bar-actions>
                 {% block eccb_step_set_list_smart_bar_actions_add %}
                     <sw-button :routerLink="{ name: 'eccb.plugin.create' }" variant="primary">
-                        {{ $tc('eccb.step-set-list.buttonAddStep') }}
+                        {{ $tc('eccb.sequences.addSequence') }}
                     </sw-button>
                 {% endblock %}
             </template>
